# task-queue-fastapi-celery

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/constant/: urls.py
app/worker/: celery_app.py  celery_worker.py
