[tool.poetry]
name = "task-queue-fastapi-celery"
version = "0.1.0"

[tool.poetry.dependencies]
python = "3.12.1"
flake8 = "^3.8.3"
fastapi = "^0.70.0"
hypercorn = "^0.13.2"
celery = "^5.3.6"
redis = "^4.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
